crates/pap-c/include/pap.h

typedef struct PapCapabilityToken PapCapabilityToken;
typedef struct PapDisclosureSet PapDisclosureSet;
typedef struct PapMandate PapMandate;
typedef struct PapPrincipalKeypair PapPrincipalKeypair;
typedef struct PapScope PapScope;
typedef struct PapScopeAction PapScopeAction;
typedef struct PapSession PapSession;
typedef struct PapSessionKeypair PapSessionKeypair;
// Returns the most recent error message as a heap-allocated C string,
// or NULL if no error has occurred. Caller must free with `pap_string_free`.
//
// ⚠️ THREAD-SAFETY WARNING: This function reads from thread-local storage.
// In async runtimes (tokio, async-std) where tasks migrate between threads,
// the error set by one operation may not be visible on the thread that calls
// this function. For async contexts, use `pap_last_error_out` pattern or
// ensure all PAP calls happen on a single dedicated thread.
char *pap_last_error_message(void);
// Free a string returned by any `pap_*` function.
// # Safety
// `s` must be a pointer previously returned by a PAP function, or NULL.
void pap_string_free(char *s);
// Generate a new Ed25519 principal keypair.
struct PapPrincipalKeypair *pap_keypair_generate(void);
// Reconstruct a keypair from 32 raw secret-key bytes.
// `bytes` must point to exactly 32 bytes.
// # Safety
// `bytes` must be a valid pointer to at least `len` bytes.
struct PapPrincipalKeypair *pap_keypair_from_bytes(const uint8_t *bytes, uintptr_t len);
// Free a PapPrincipalKeypair. Passing NULL is a no-op.
// # Safety
// `kp` must be a pointer previously returned by a `pap_keypair_*` function.
void pap_keypair_free(struct PapPrincipalKeypair *kp);
// Returns the `did:key` identifier as a heap-allocated C string.
// Caller must free with `pap_string_free`.
char *pap_keypair_did(const struct PapPrincipalKeypair *kp);
// Writes the 32-byte public key into `out` (caller-allocated 32-byte buffer).
// Returns 0 on success, -1 on error.
// # Safety
// `out` must point to a buffer of at least 32 bytes.
int pap_keypair_public_bytes(const struct PapPrincipalKeypair *kp, uint8_t *out);
// Sign `msg_len` bytes at `msg`, writing the 64-byte signature into `sig_out`.
// Returns 0 on success, -1 on error.
// # Safety
// `msg` must be valid for `msg_len` bytes; `sig_out` must be at least 64 bytes.
int pap_keypair_sign(const struct PapPrincipalKeypair *kp,
                     const uint8_t *msg,
                     uintptr_t msg_len,
                     uint8_t *sig_out);
// Generate an ephemeral session keypair (single-use, not linked to principal).
struct PapSessionKeypair *pap_session_keypair_generate(void);
// Free a PapSessionKeypair. Passing NULL is a no-op.
// # Safety
// `kp` must be a pointer previously returned by `pap_session_keypair_generate`.
void pap_session_keypair_free(struct PapSessionKeypair *kp);
// Returns the ephemeral session `did:key`. Caller frees with `pap_string_free`.
char *pap_session_keypair_did(const struct PapSessionKeypair *kp);
// Extract the 32-byte Ed25519 public key from a `did:key` string.
// `out` must be a caller-allocated 32-byte buffer.
// Returns 0 on success, -1 on invalid DID.
// # Safety
// `out` must point to at least 32 bytes.
int pap_did_to_public_key_bytes(const char *did, uint8_t *out);
// Create a scope action with no object constraint.
// `action` is a Schema.org action string, e.g. `"schema:SearchAction"`.
struct PapScopeAction *pap_scope_action_new(const char *action);
// Create a scope action with an object type constraint,
// e.g. action=`"schema:ReserveAction"`, object=`"schema:Flight"`.
struct PapScopeAction *pap_scope_action_with_object(const char *action, const char *object);
// Free a PapScopeAction. Passing NULL is a no-op.
// # Safety
// `a` must be a pointer previously returned by a `pap_scope_action_*` function.
void pap_scope_action_free(struct PapScopeAction *a);
// Build a Scope from an array of PapScopeAction pointers.
// The actions are cloned; ownership of the action handles stays with the caller.
// `actions` may be NULL when `count` is 0 (produces deny-all scope).
// # Safety
// `actions` must be a valid array of `count` non-null `*const PapScopeAction` pointers.
struct PapScope *pap_scope_new(const struct PapScopeAction *const *actions, uintptr_t count);
// Create an empty (deny-all) scope.
struct PapScope *pap_scope_deny_all(void);
// Free a PapScope. Passing NULL is a no-op.
// # Safety
// `s` must be a pointer previously returned by a `pap_scope_*` function.
void pap_scope_free(struct PapScope *s);
// Returns 1 if the scope permits `action`, 0 otherwise (including on null input).
int pap_scope_permits(const struct PapScope *scope, const char *action);
// Returns 1 if every action in `child` is also in `parent` (child ⊆ parent).
// Returns 0 on any error or if the check fails.
int pap_scope_contains(const struct PapScope *parent, const struct PapScope *child);
// Create an empty disclosure set (disclose nothing).
struct PapDisclosureSet *pap_disclosure_set_empty(void);
// Free a PapDisclosureSet. Passing NULL is a no-op.
// # Safety
// `ds` must be a pointer previously returned by a `pap_disclosure_set_*` function.
void pap_disclosure_set_free(struct PapDisclosureSet *ds);
// Issue a root mandate directly by the principal.
// `ttl_rfc3339` is an RFC 3339 timestamp, e.g. `"2026-03-22T12:00:00Z"`.
// Returns NULL on parse error or null pointer argument.
struct PapMandate *pap_mandate_issue_root(const char *principal_did,
                                          const char *agent_did,
                                          const struct PapScope *scope,
                                          const struct PapDisclosureSet *disclosure_set,
                                          const char *ttl_rfc3339);
// Delegate a child mandate from an existing parent mandate.
// Enforces: child scope ⊆ parent scope; child TTL ≤ parent TTL.
// Returns NULL on scope/TTL violation.
struct PapMandate *pap_mandate_delegate(const struct PapMandate *parent,
                                        const char *agent_did,
                                        const struct PapScope *scope,
                                        const struct PapDisclosureSet *disclosure_set,
                                        const char *ttl_rfc3339);
// Free a PapMandate. Passing NULL is a no-op.
// # Safety
// `m` must be a pointer previously returned by a `pap_mandate_*` function.
void pap_mandate_free(struct PapMandate *m);
// Sign the mandate with the issuer's keypair. Must be called before use.
// Returns 0 on success, -1 on null pointer.
// # Safety
// Both `m` and `kp` must be valid non-null handles.
int pap_mandate_sign(struct PapMandate *m, const struct PapPrincipalKeypair *kp);
// Verify the mandate's Ed25519 signature against `pubkey_bytes` (32 bytes).
// Returns 0 on success, -1 on failure.
// # Safety
// `pubkey_bytes` must point to exactly 32 bytes.
int pap_mandate_verify(const struct PapMandate *m,
                       const uint8_t *pubkey_bytes,
                       uintptr_t pubkey_len);
// Serialize the mandate to a JSON C string. Caller frees with `pap_string_free`.
char *pap_mandate_to_json(const struct PapMandate *m);
// Deserialize a mandate from a JSON C string. Caller frees with `pap_mandate_free`.
// NOTE: `decay_state` in the JSON is *not* covered by the signature.
// Always call `pap_mandate_sync_decay_state` after deserialization to get the
// correct time-computed decay state.
struct PapMandate *pap_mandate_from_json(const char *json);
// Returns the mandate's SHA-256 hash (base64url) as a C string.
// Caller frees with `pap_string_free`.
// The hash covers all signed fields but excludes `decay_state` and `signature`.
char *pap_mandate_hash(const struct PapMandate *m);
// Returns the current decay state as an integer constant.
// See `PAP_DECAY_*` constants. Returns -1 on null input.
int pap_mandate_decay_state(const struct PapMandate *m);
// Compute the time-based decay state without mutating the mandate.
// `decay_window_secs` is the number of seconds before TTL at which the
// mandate enters Degraded state (e.g. 3600 for a 1-hour warning).
//
// IMPORTANT: This is a pure computation. The mandate's stored `decay_state`
// is NOT updated. Call `pap_mandate_sync_decay_state` to apply the result.
//
// Returns the computed state integer, or -1 on null input.
int pap_mandate_compute_decay_state(const struct PapMandate *m, int64_t decay_window_secs);
// Explicitly transition the mandate's decay state.
// Valid transitions (per spec): Active→Degraded, Degraded→ReadOnly,
// ReadOnly→Suspended, Degraded→Active (renewal), ReadOnly→Active (renewal).
// Suspended is terminal — no further transitions are allowed.
//
// NOTE: If the TTL has expired before a polling cycle ran, calling this with
// ReadOnly on an Active mandate will fail (Active→ReadOnly is not a valid
// single-step transition). Use `pap_mandate_sync_decay_state` instead, which
// handles multi-step transitions automatically.
//
// Returns 0 on success, -1 on invalid transition.
int pap_mandate_transition_decay(struct PapMandate *m, int next_state);
// Synchronize the mandate's stored decay state to the time-computed value.
//
// This is the safe high-level alternative to calling `compute_decay_state`
// and `transition_decay` manually. It handles the self-transition guard:
// calling `transition_decay` with the current state is rejected by the spec
// state machine, so this function is a no-op when the computed state equals
// the current state.
//
// The one-step guarantee (Active→Degraded→ReadOnly→Suspended, never
// skipping an intermediate) is now enforced by `compute_decay_state` itself
// per spec §5.7.1 — no special handling is needed here.
//
// Returns 0 on success (including no-op), -1 on error.
int pap_mandate_sync_decay_state(struct PapMandate *m, int64_t decay_window_secs);
// Returns 1 if `now > ttl`, 0 otherwise. Returns -1 on null input.
int pap_mandate_is_expired(const struct PapMandate *m);
// Returns the principal DID. Caller frees with `pap_string_free`.
char *pap_mandate_principal_did(const struct PapMandate *m);
// Returns the agent DID. Caller frees with `pap_string_free`.
char *pap_mandate_agent_did(const struct PapMandate *m);
// Returns the issuer DID. Caller frees with `pap_string_free`.
char *pap_mandate_issuer_did(const struct PapMandate *m);
// Returns the TTL as an RFC 3339 string. Caller frees with `pap_string_free`.
char *pap_mandate_ttl(const struct PapMandate *m);
// Mint a new capability token.
// `expires_at_rfc3339` is an RFC 3339 expiry timestamp.
struct PapCapabilityToken *pap_token_mint(const char *target_did,
                                          const char *action,
                                          const char *issuer_did,
                                          const char *expires_at_rfc3339);
// Free a PapCapabilityToken. Passing NULL is a no-op.
// # Safety
// `t` must be a pointer previously returned by a `pap_token_*` function.
void pap_token_free(struct PapCapabilityToken *t);
// Sign the token with the issuer's keypair. Returns 0 on success.
// # Safety
// Both `t` and `kp` must be valid non-null handles.
int pap_token_sign(struct PapCapabilityToken *t, const struct PapPrincipalKeypair *kp);
// Serialize the token to a JSON C string. Caller frees with `pap_string_free`.
char *pap_token_to_json(const struct PapCapabilityToken *t);
// Deserialize a capability token from JSON. Caller frees with `pap_token_free`.
struct PapCapabilityToken *pap_token_from_json(const char *json);
// Initiate a new session from a capability token.
// `issuer_pubkey` must point to exactly 32 bytes (Ed25519 public key of the
// token issuer, used to verify the token signature).
// Returns NULL on verification failure.
// # Safety
// `issuer_pubkey` must point to at least 32 bytes.
struct PapSession *pap_session_initiate(const struct PapCapabilityToken *token,
                                        const char *receiver_did,
                                        const uint8_t *issuer_pubkey,
                                        uintptr_t pubkey_len);
// Free a PapSession. Passing NULL is a no-op.
// # Safety
// `s` must be a pointer previously returned by `pap_session_initiate`.
void pap_session_free(struct PapSession *s);
// Open the session by exchanging ephemeral session DIDs.
// Both DIDs are typically `did:key` identifiers from freshly-generated
// `PapSessionKeypair`s. Returns 0 on success.
int pap_session_open(struct PapSession *s,
                     const char *initiator_session_did,
                     const char *receiver_session_did);
// Transition the session to Executed state. Returns 0 on success.
int pap_session_execute(struct PapSession *s);
// Close the session and discard ephemeral state. Returns 0 on success.
int pap_session_close(struct PapSession *s);
// Returns the session state as an integer.
// See `PAP_SESSION_*` constants. Returns -1 on null input.
int pap_session_state(const struct PapSession *s);
// Returns the session UUID as a C string. Caller frees with `pap_string_free`.
char *pap_session_id(const struct PapSession *s);